--- a/package.json
+++ b/package.json
@@ -15,6 +15,14 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "./node_modules/.bin/standard",
+    "lint-fix": "./node_modules/.bin/standard"
+  },
+  "standard": {
+    "env": {
+      "browser": true,
+      "jest": true
+    }
   }
 }
