--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "eject": "react-scripts eject",
     "lint": "./node_modules/.bin/standard",
     "lint-fix": "./node_modules/.bin/standard --fix",
-    "precommit": "yarn test",
-    "prepush": "yarn test"
+    "precommit": "yarn test -- --coverage",
+    "prepush": "yarn test -- --coverage"
   },
   "standard": {
     "env": {
